--- a/canvas.html
+++ b/canvas.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <svg xmlns="http://www.w3.org/2000/svg" height="500" width="500" id="box">
+    <svg xmlns="http://www.w3.org/2000/svg" height="500" width="500" id="box" border="border">
 
     </svg>
     <button type="button" id="clear"> Clear </button>
